Added: add code for form validation

--- a/pages/AdddressBookForm.html
+++ b/pages/AdddressBookForm.html
@@ -80,6 +80,10 @@
             </div>
     </div>
     </form>
+
+</div>
+<script defer src="../css/AddressBookForm.css"></script>
+    <script defer src="../js/Contact.js"></script>
 </body>
 
 
