Modified: add submit and reset button

--- a/pages/AdddressBookForm.html
+++ b/pages/AdddressBookForm.html
@@ -78,6 +78,13 @@
                     <input class="input" type="text" id="zip" name="zip" placeholder="" required>
                 </div>
             </div>
+            <!-- UC-5 -->
+            <div class="buttonParent">
+                <div class="submit-reset">
+                    <button type="reset" class="resetButton button">Reset</button>
+                    <button type="submit" class="button submitButton" id="submitButton">Add</button>
+                </div>
+            </div>
     </div>
     </form>
 
