Modified:save into local stroage

--- a/pages/AdddressBookForm.html
+++ b/pages/AdddressBookForm.html
@@ -3,15 +3,16 @@
 
 <head>
     <!--UC1-->
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "shortcut icon" href = "/asset/attach_file.svg">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/AddressBookForm.css">
     <title>Address Book</title>
 </head>
 
 <body>
+    <!-- UC-1 -->
     <header class="header-content header">
         <div class="logo-content">
             <img src="/asset/addressbookimage.png" alt="">
@@ -21,12 +22,12 @@
             </div>
         </div>
     </header>
-     <!-- UC-2 -->
-     <div class="form-content">
+    <!-- UC-2 -->
+    <div class="form-content">
         <div class="content">
             <div class="top">
-                <div class ="box">PERSON ADDRESS FORM</div>  
-                <div class ="push"><a href="/pages/AdddressBookForm.html"><img src="/asset/cancelButton.png" alt=""></a></div>
+                <div class="box">PERSON ADDRESS FORM</div>
+                <div class="push"><a href="/pages/home.html"><img src="/asset/cancelButton.png" alt=""></a></div>
             </div>
         </div>
     </div>
@@ -34,30 +35,31 @@
     <div class="form">
         <form class="form1" action="#" onreset="resetForm()" onsubmit="save()">
             <div class="row-content">
-                <label class="label-text" for="name">Full Name</label>
+                <label class="label-text" for="name">Full Na   me</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your name..." required>
                 <error-output class="text-error" for="text"></error-output>
             </div>
             <div class="row-content">
                 <label class="label-text" for="phone">Phone Number</label>
                 <input class="input" type="text" id="phone" name="phone" placeholder="" required>
-                <error-output class="text-error" for="text"></error-output>
+                <error-output class="phone-error" for="text"></error-output>
             </div>
             <div class="row-content">
                 <label class="label-text" for="address">Address</label>
                 <input class="input-address" type="text" id="address" name="address" placeholder="" required>
+                <error-output class="add-error" for="text"></error-output>
             </div>
             <div class="row-content-select">
                 <div class="place">
                     <label class="label-text" for="city">City</label>
                     <select class="select" id="city" name="city">
                         <option value="" selected disabled hidden>Select City</option>
-                        <option value="1">Bhopal</option>
-                        <option value="2">Chennai</option>
-                        <option value="3">Delhi</option>
-                        <option value="4">Kolkata</option>
-                        <option value="5">Mumbai</option>
-                        <option value="6">Pune</option>
+                        <option value="Bhopal">Bhopal</option>
+                        <option value="Chennai">Chennai</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Kolkata">Kolkata</option>
+                        <option value="Mumbai">Mumbai</option>
+                        <option value="Pune">Pune</option>
                     </select>
                 </div>
 
@@ -65,33 +67,33 @@
                     <label class="label-text" for="state">State</label>
                     <select class="select" id="state`" name="state">
                         <option value="" selected disabled hidden>Select State</option>
-                        <option value="1">Madhya Pradesh</option>
-                        <option value="2">Maharashtra</option>
-                        <option value="3">Delhi</option>
-                        <option value="4">West Bengal</option>
-                        <option value="5">TamilNadu</option>
+                        <option value="Madhya Pradesh">Madhya Pradesh</option>
+                        <option value="Maharashtra">Maharashtra</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="West Bengal">West Bengal</option>
+                        <option value="Tamilnadu">Tamilnadu</option>
                     </select>
                 </div>
 
                 <div class="place">
                     <label class="label-text" for="zip">Zip-Code</label>
                     <input class="input" type="text" id="zip" name="zip" placeholder="" required>
+                    <error-output class="zip-error" for="text"></error-output>
                 </div>
             </div>
-            <!-- UC-5 -->
+       <!-- UC-5 -->
             <div class="buttonParent">
                 <div class="submit-reset">
                     <button type="reset" class="resetButton button">Reset</button>
-                    <button type="submit" class="button submitButton" id="submitButton">Add</button>
+                    <a href="/pages/home.html"><button type="submit" class="button submitButton" id="submitButton">Add</button></a>
                 </div>
             </div>
     </div>
     </form>
-
-</div>
-<script defer src="../js/AddressBookForm.js"></script>
+    </div>
+    <script defer src="../js/AddressBookForm.js"></script>
     <script defer src="../js/Contact.js"></script>
-</body>
 
+</body>
 
 </html>
