Header Content added

--- a/pages/home.html
+++ b/pages/home.html
@@ -15,12 +15,23 @@
     <!-- UC-1 -->
     <header class="header-content header">
         <div class="logo-content">
-            <img src="/asset/addressbookimage.png" alt="">
+            <img src="../asset/addressbookimage.png" alt="">
             <div>
                 <span class="add-text">ADDRESS</span><br>
                 <span class="add-text add-book">BOOK</span>
             </div>
         </div>
     </header>
+    <!-- UC 2 -->
+    <div class="main-content">
+        <div class="header-content-add">
+            <div class="add-details-text">
+                Person Details
+                <div class="per-count">10</div>
+            </div>
+            <a href="../pages/AdddressBookForm.html" class="add-button">
+                <img src="../asset/plus_symbol.svg" alt="">Add User</a>
+        </div>
+    </div>
 </body>
 </html>
